challenges-live-malware/challenge_017_live/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: challenge-017-live
  labels:
    name: challenge-017-live
    challenge: "017"
    purpose: malware-analysis
    blueteamvillage.org/allow-outbound: "true"
