challenges-live-malware/challenge_017_live/network-policy-sample-fetch.yaml
# Pod-scoped fetch allowlist. L7 dns rules required for Cilium toFQDNs.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-sample-download
  namespace: challenge-017-live
spec:
  endpointSelector:
    matchLabels:
      app: challenge-017-live
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: github.com
        - matchName: www.github.com
        - matchName: raw.githubusercontent.com
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.github.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
